fixed anchor scroll alignment

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -30,6 +30,10 @@ body, input, textarea, select {
   margin-top: 50px;
 }
 
+.anchor {
+  scroll-margin-top: 75px;
+}
+
 .section-header {
   text-align: center;
   margin-bottom: 25px;
